@@ -1,5 +1,11 @@
 2003-06-24  Anders Carlsson  <andersca@codefactory.se>
 
+	* help-converters/info/main.c: (main):
+	Use g_strdup_printf instead of sprintf. 
+	(#109889, Christian Marillat).
+	
+2003-06-24  Anders Carlsson  <andersca@codefactory.se>
+
 	* help-converters/man/gnome-man2html.c: Use glib versions of
 	string functions. (Fixes #81355, Morten Welinder.)
 
